--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
